log
Fri 12 May 2023 12:05:05 PM UTC: 
 heap.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
 tests:  0|0
cb7d8e9
Fri 12 May 2023 12:13:35 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 0/70
6e06323
Fri 12 May 2023 12:25:55 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:14: error: ‘new’ undeclared (first use in this function)
   37 |         if (!new)       exit(EXIT_FAILURE);
      |              ^~~
heap.c:37:14: note: each undeclared identifier is reported only once for each function it appears in
heap.c:36:15: error: unused variable ‘heap’ [-Werror=unused-variable]
   36 |         Heap* heap = (Heap*) malloc (sizeof(Heap));
      |               ^~~~
cc1: all warnings being treated as errors
Compilation failed
3c49826
Fri 12 May 2023 12:26:11 PM UTC: 
 heap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:37:14: error: ‘new’ undeclared (first use in this function)
   37 |         if (!new)       exit(EXIT_FAILURE);
      |              ^~~
heap.c:37:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
c9ab8c9
Fri 12 May 2023 12:26:33 PM UTC: 
 heap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:42:9: error: ‘new’ undeclared (first use in this function)
   42 |         new->size = 0;
      |         ^~~
heap.c:42:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
cc5e9be
Fri 12 May 2023 12:27:08 PM UTC: 
 heap.c | 3 ---
 1 file changed, 3 deletions(-)
 tests:  0|4
total_score: 0/70
50e38f3
Fri 12 May 2023 12:28:46 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
a5dcea1
Fri 12 May 2023 12:38:33 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:25: error: incompatible types when returning type ‘heapElem’ {aka ‘struct nodo’} but ‘void *’ was expected
   21 |     return pq->heapArray[0];
      |            ~~~~~~~~~~~~~^~~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
7fd46e6
Fri 12 May 2023 12:38:54 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_top’:
heap.c:21:28: error: invalid type argument of ‘->’ (have ‘heapElem’ {aka ‘struct nodo’})
   21 |     return pq->heapArray[0]->data;
      |                            ^~
heap.c:22:1: error: control reaches end of non-void function [-Werror=return-type]
   22 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
478429f
